# virtual-slam

./: CMakeLists.txt  virtual-slam.kdev4
include/: BagOfWords.h  IcpSolver.h  PointCloudGenerator.h
src/: BagOfWords.cpp  CMakeLists.txt  IcpSolver.cpp  PnpSolver.cpp  PointCloudGenerator.cpp  bow.cpp  icp.cpp  pnp.cpp
